js/js.translator/testData/incremental/invalidation/companionConstVal/lib2/inlineFunction.0.6.kt
inline fun inlineFunction(): String {
    return "${Class.CONST_VALUE}"
}
